--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ body {
     font-family: 'Roboto Mono', monospace;
 }
 h1 {
-    color: white;
+    color: lime;
     margin-bottom: 2.5rem;
 }
 canvas {
-    border: 3px solid white;
+    border: 3px solid lime;
     border-radius: 20px;
     padding: 2px;
 }
